color added to form

--- a/babyDinoForm.html
+++ b/babyDinoForm.html
@@ -1,11 +1,13 @@
 <h1>Add a baby dino</h1>
 <form>
     <label>Name</label>
-    <input type="type"/>
+    <input type="text"/>
     <label>Type</label>
     <select>
         <option>Vegetarian</option>
         <option>Carnivore</option>
     </select>
+    <label>Color</label>
+    <input type="text"/>
     <button>Submit</button>
 </form>
