yeaaah baby dino suck bigtime

--- a/babyDinoForm.html
+++ b/babyDinoForm.html
@@ -1,11 +1,11 @@
 <h1>Add a baby dino</h1>
 <form>
-    <label>Name</label>
-    <input type="type"/>
-    <label>Type</label>
-    <select>
-        <option>Vegetarian</option>
-        <option>Carnivore</option>
-    </select>
-    <button>Submit</button>
+	<label>Name</label>
+	<input type="type" />
+	<label>Type</label>
+	<select>
+		<option>Plant eater</option>
+		<option>Carnivore</option>
+	</select>
+	<button>Submit</button>
 </form>
